
4.6.6:

Improvements: 
- Plugin prefix cannot be removed from fully custom help messages (#458)

Bug Fixes: 
- Fixed database disconnecting issues (#460 #466) - Credit SavageAvocado (GitHub)
- Fixed ClassCastException in the demote player command (#467 #465) - Credit SavageAvocado (GitHub)

4.6.7:

Features: 
- Added French translations - Credit Timiliris_420, Silvex (discord)

Improvements: 
- Improved Vietnamese translations - Credit Shelly (discord)

4.7.0:
NOTE: this version reworks the placeholder system, some placeholders may need to be reconfigured to the new system.

Features: 
- Added support for DecentHolograms (#472 #357) - Credit SavageAvocado (GitHub)
- Reworked placeholder system
  - Credit booksaw, SavageAvocado, Aeliios
  - Closes the issues: (#463 #451 #473 #442 #438 #389 #343 #399 #474 #470 #477)
  - Check the Wiki page for more information (https://github.com/booksaw/BetterTeams/wiki/PlaceholderAPI)

Bug Fixes: 
- Fixed IllegalStateException blocking players from leaving teams (#475 476)
- Fix bug with converting YAML to SQL (#471)

4.7.1:

Features: 
- Added Hungarian translations - Credit Bercyy (discord)

Improvements
- Updated Vietnamese Translations - Credit Shelly and Kitohazu (discord) 
- Updated Spanish translations - Credit Santos (discord)

4.7.2:

Bug Fixes: 
- Added the missing %betterteams_inTeam% placeholder that was missed in the rework (#480 #479) - Credit AELLIOS (discord)
- Fixed issue with all level placeholders not working as expexpected (#485 #484) - Credit AELLIOS (discord)
- Fixed a memory leak in the SQL storage type (#488 #486) - Credit Dev0Louis (GitHub)
- Fixed some issues with the conversion between YAML and SQL (#481) - Credit AELLIOS (discord)
- Fixed issue with the Vietnamese translations - NOTE: you will need to delete the vi.yml file for this to be updated (#483)
- Improved logging for invalid team files in /team top (#490)

Headings: 
Features: 

Improvements:

Bug Fixes: 
