@@ -694,6 +694,7 @@ Bug Fixes:
 - Fixed some issues with the conversion between YAML and SQL (#481) - Credit AELLIOS (discord)
 - Fixed issue with the Vietnamese translations - NOTE: you will need to delete the vi.yml file for this to be updated (#483)
 - Improved logging for invalid team files in /team top (#490)
+- Improved logging for invalid SQL statements (#478)
 
 Headings: 
 Features: 
